fix: :bug: fix scrollbar showing when inspecting document

--- a/game/style.css
+++ b/game/style.css
@@ -7,6 +7,7 @@ body {
     background-color: slateblue;
     min-width: 100vw;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 canvas {
     background-color: red;
